force-app/main/default/objects/KimbleOne__TimeEntry__c/KimbleOne__TimeEntry__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>TimeEntry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>