force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__ActivityAssignmentRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignmentRate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity Assignment Rate</label>
    <referenceTo>KimbleOne__ActivityAssignmentRate__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>