force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__Category4__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Category4__c</fullName>
    <label>Category 4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>