force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__CategoryCombination__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CategoryCombination__c</fullName>
    <label>Category Combination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>