force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__EntryCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryCost__c</fullName>
    <formula>IF( !ISBLANK(KimbleOne__ResourceStandardCost__c) &amp;&amp; KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__CostBehaviourRule__r.KimbleOne__UseResourceStandardCostOnTimeEntry__c ,  KimbleOne__EntryUnits__c * KimbleOne__ResourceStandardCost__c,

KimbleOne__EntryUnits__c *  KimbleOne__ActivityAssignmentRate__r.KimbleOne__CostRate__c)</formula>
    <label>Entry Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>