force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__EntryInternalCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryInternalCost__c</fullName>
    <formula>KimbleOne__EntryUnits__c *  KimbleOne__ActivityAssignmentRate__r.KimbleOne__InternalCostRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Internal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>