force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__EntryRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryRevenue__c</fullName>
    <formula>IF ( ISBLANK(KimbleOne__OverrideEntryRevenue__c), KimbleOne__RevenueUnits__c *  KimbleOne__ActivityAssignmentRate__r.KimbleOne__RevenueRate__c, KimbleOne__OverrideEntryRevenue__c)</formula>
    <label>Entry Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>