force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__EntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryUnits__c</fullName>
    <label>Entry Units</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>