force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__FactoredEntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FactoredEntryUnits__c</fullName>
    <formula>KimbleOne__EntryUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__ActivityPeriodRateBand__r.KimbleOne__UtilisationFactor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factored Entry Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>