force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__FormattedEntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FormattedEntryUnits__c</fullName>
    <formula>IF(  KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__ShowUsageAsHoursAndMins__c ,
            IF(ABS(KimbleOne__EntryUnits__c) &lt; 1, TEXT(ROUND(KimbleOne__EntryUnits__c *60,0)) + $Label.kimbleone__minutespart,

            IF(FIND(&apos;.&apos;, TEXT(KimbleOne__EntryUnits__c)) == 0, TEXT(KimbleOne__EntryUnits__c) + $Label.kimbleone__hourspart , LEFT(TEXT(KimbleOne__EntryUnits__c), FIND(&apos;.&apos;, TEXT(KimbleOne__EntryUnits__c))-1) + $Label.kimbleone__hourspart + &apos; &apos; +

            TEXT(ROUND(MOD(ABS(KimbleOne__EntryUnits__c),1) * 60,0)) + $Label.kimbleone__minutespart)


            ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Entry Units</label>
    <type>Text</type>
</CustomField>