force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__IntInvCcyEntryInternalRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyEntryInternalRevenue__c</fullName>
    <formula>KimbleOne__EntryUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__IntInvCcyInternalRevenueRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Internal Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>