force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__InvoicingCurrencyEntryRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyEntryRevenue__c</fullName>
    <formula>IF ( ISBLANK(KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c), KimbleOne__RevenueUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__InvoicingCurrencyRevenueRate__c, KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c )</formula>
    <label>Invoicing Currency Entry Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>