force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__InvoicingCurrencyEntryRevenueRaw__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyEntryRevenueRaw__c</fullName>
    <formula>IF ( ISBLANK(KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c), KimbleOne__RevenueUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__InvoicingCurrencyRevenueRate__c, KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c )</formula>
    <label>Invoicing Currency Entry Revenue Raw</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>