force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c</fullName>
    <label>Entry Revenue (Overridden)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>