force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__IsValidAssignmentRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsValidAssignmentRate__c</fullName>
    <formula>AND(KimbleOne__TimePeriod__r.KimbleOne__StartDate__c &gt;=  KimbleOne__ActivityAssignmentRate__r.KimbleOne__ActivityAssignmentRateSummary__r.KimbleOne__EffectiveFromDate__c, OR(ISBLANK(KimbleOne__ActivityAssignmentRate__r.KimbleOne__ActivityAssignmentRateSummary__r.KimbleOne__EffectiveToDate__c), KimbleOne__TimePeriod__r.KimbleOne__StartDate__c &lt;= KimbleOne__ActivityAssignmentRate__r.KimbleOne__ActivityAssignmentRateSummary__r.KimbleOne__EffectiveToDate__c))</formula>
    <label>Is Valid Assignment Rate</label>
    <type>Checkbox</type>
</CustomField>