force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__Notes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>