force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__PlanTaskAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PlanTaskAssignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Task Assignment</label>
    <referenceTo>KimbleOne__PlanTaskAssignment__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>