force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__ResourceStandardCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceStandardCost__c</fullName>
    <label>Resource Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>