force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__RevenueUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueUnits__c</fullName>
    <label>Revenue Units</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>