force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__SupplierInvCcyEntryCostRaw__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvCcyEntryCostRaw__c</fullName>
    <formula>KimbleOne__EntryUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__SupplierInvoicingCurrencyCostRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Invoicing Ccy Entry Cost Raw</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>