force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__TaskAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Task Assignment</label>
    <referenceTo>KimbleOne__TaskAssignment__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>