force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Timesheet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>KimbleOne__Timesheet__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>TimeEntries</relationshipName>
    <type>Lookup</type>
</CustomField>