force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__TOILEntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TOILEntryUnits__c</fullName>
    <formula>KimbleOne__EntryUnits__c * KimbleOne__ActivityAssignmentRate__r.KimbleOne__ActivityPeriodRateBand__r.KimbleOne__TOILFactor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOIL Entry Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>