force-app/main/default/objects/KimbleOne__TimeEntry__c/fields/KimbleOne__TrackingTimePeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackingTimePeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking Time Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__TimePeriod__c.KimbleOne__Perspective__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>Operational</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__TimePeriod__c.KimbleOne__PeriodType__r.KimbleOne__TrackAtThisLevel__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__TimePeriod__c</referenceTo>
    <relationshipLabel>Time Entries (Tracking Time Period)</relationshipLabel>
    <relationshipName>TimeEntriesTracking</relationshipName>
    <type>Lookup</type>
</CustomField>