force-app/main/default/objects/KimbleOne__TimeEntry__c/validationRules/KimbleOne__ScopingDeliveryElement.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ScopingDeliveryElement</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(KimbleOne__DeliveryElement__c) &amp;&amp; KimbleOne__DeliveryElement__c !=  KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivity__r.KimbleOne__DeliveryElement__c</errorConditionFormula>
    <errorMessage>Time Entry has invalid Scoping Element Context</errorMessage>
</ValidationRule>