force-app/main/default/objects/KimbleOne__TimeEntry__c/validationRules/KimbleOne__TrackingPeriodBusinessUnitGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__TrackingPeriodBusinessUnitGroup</fullName>
    <active>true</active>
    <description>Denormalised Tracking Period on Time Entry has same Business Unit Group context as the Resourced Activity</description>
    <errorConditionFormula>KimbleOne__TrackingTimePeriod__r.KimbleOne__BusinessUnitGroup__c &lt;&gt;   KimbleOne__ActivityAssignment__r.KimbleOne__ResourcedActivity__r.KimbleOne__BusinessUnitGroup__c</errorConditionFormula>
    <errorMessage>Time Entry Tracking Period has invalid Business Unit Group context</errorMessage>
</ValidationRule>