force-app/main/default/objects/KimbleOne__TimeEntry__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__Timesheet__c</columns>
    <columns>KimbleOne__TimePeriod__c</columns>
    <columns>KimbleOne__TrackingTimePeriod__c</columns>
    <columns>KimbleOne__InvoiceItemStatus__c</columns>
    <columns>KimbleOne__EntryUnits__c</columns>
    <columns>KimbleOne__CategoryCombination__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>KimbleOne__EntryRevenue__c</columns>
    <columns>KimbleOne__RevenueCalculationMethod__c</columns>
    <columns>KimbleOne__InvoicingCurrencyOverrideEntryRevenue__c</columns>
    <columns>KimbleOne__OverrideEntryRevenue__c</columns>
    <columns>KimbleOne__InvoicingCurrencyEntryRevenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>